appId: "com.shifthackz.aisdv1.app"
---
- launchApp:
    permissions:
      photos: allow
    clearState: true
    stopApp: true
- tapOn:
    point: "82%,90%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "82%,90%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "82%,90%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "82%,90%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "82%,90%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "82%,90%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "82%,90%"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    text: "Далі"
    optional: true
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    point: "8%,9%"
- waitForAnimationToEnd:
    timeout: 5000
- swipe:
    start: 50%,34%
    end: 50%,76%
    duration: 650
- waitForAnimationToEnd:
    timeout: 5000
- swipe:
    start: 50%,34%
    end: 50%,76%
    duration: 650
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible: "Automatic 1111"
    timeout: 45000
- tapOn: "Automatic 1111"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Далі"
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible: "Демо режим"
    timeout: 45000
- tapOn: "Демо режим"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Підключитися"
- extendedWaitUntil:
    visible: "Txt2Img"
    timeout: 45000
- tapOn: "Параметри"
- extendedWaitUntil:
    visible: "Параметри"
    timeout: 20000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Введення тегами"
- waitForAnimationToEnd:
    timeout: 1500
- tapOn: "Завжди показувати всі опції"
- waitForAnimationToEnd:
    timeout: 1500
- tapOn: "Txt2Img"
- extendedWaitUntil:
    visible: "Текст в Картинку"
    timeout: 20000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Запит"
- eraseText
- inputText: "man, photorealistic, black hair, aviator glasses, handsome, beautiful, nature background,"
- tapOn:
    point: "50%,17%"
- waitForAnimationToEnd:
    timeout: 1000
- tapOn: "Негативний запит"
- eraseText
- inputText: "bad anatomy, bad fingers, distorted, jpeg artifacts,"
- tapOn:
    point: "50%,17%"
- waitForAnimationToEnd:
    timeout: 1000
- tapOn: "Текст в Картинку"
- waitForAnimationToEnd:
    timeout: 5000
- tapOn:
    text: "Показати всі опції"
    optional: true
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: "docs/screenshots/raw/ios/uk/02-controls"
- tapOn: "Уявити"
- extendedWaitUntil:
    visible: "Закрити"
    timeout: 90000
- waitForAnimationToEnd:
    timeout: 9000
- takeScreenshot: "docs/screenshots/raw/ios/uk/01-create"
- tapOn: "Закрити"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Уявити"
- extendedWaitUntil:
    visible: "Закрити"
    timeout: 90000
- waitForAnimationToEnd:
    timeout: 9000
- tapOn: "Закрити"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Уявити"
- extendedWaitUntil:
    visible: "Закрити"
    timeout: 90000
- waitForAnimationToEnd:
    timeout: 9000
- tapOn: "Закрити"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Уявити"
- extendedWaitUntil:
    visible: "Закрити"
    timeout: 90000
- waitForAnimationToEnd:
    timeout: 9000
- tapOn: "Закрити"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Уявити"
- extendedWaitUntil:
    visible: "Закрити"
    timeout: 90000
- waitForAnimationToEnd:
    timeout: 9000
- tapOn: "Закрити"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Уявити"
- extendedWaitUntil:
    visible: "Закрити"
    timeout: 90000
- waitForAnimationToEnd:
    timeout: 9000
- tapOn: "Закрити"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Галерея"
- extendedWaitUntil:
    visible: "Галерея"
    timeout: 20000
- waitForAnimationToEnd:
    timeout: 12000
- takeScreenshot: "docs/screenshots/raw/ios/uk/04-gallery"
- tapOn:
    point: "72%,30%"
- extendedWaitUntil:
    visible: "Результат генерації"
    timeout: 30000
- waitForAnimationToEnd:
    timeout: 9000
- tapOn: "Подробиці"
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: "docs/screenshots/raw/ios/uk/06-open"
- tapOn:
    point: "8%,9%"
- extendedWaitUntil:
    visible: "Галерея"
    timeout: 20000
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: "Параметри"
- extendedWaitUntil:
    visible: "Параметри"
    timeout: 20000
- tapOn: "Конфігурація"
- extendedWaitUntil:
    visible: "Конфігурація"
    timeout: 20000
- extendedWaitUntil:
    visible: "Automatic 1111"
    timeout: 45000
- waitForAnimationToEnd:
    timeout: 2000
- takeScreenshot: "docs/screenshots/raw/ios/uk/03-providers"
- tapOn:
    point: "8%,9%"
- extendedWaitUntil:
    visible: "Параметри"
    timeout: 20000
- waitForAnimationToEnd:
    timeout: 5000
- swipe:
    start: 50%,76%
    end: 50%,34%
    duration: 650
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible: "Інтерфейс"
    timeout: 20000
- waitForAnimationToEnd:
    timeout: 5000
- takeScreenshot: "docs/screenshots/raw/ios/uk/settings-light"
- tapOn: "Системна тема"
- waitForAnimationToEnd:
    timeout: 3000
- takeScreenshot: "docs/screenshots/raw/ios/uk/settings-dark"
- swipe:
    start: 50%,73%
    end: 50%,43%
    duration: 1800
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible: "Акцентний колір"
    timeout: 20000
- takeScreenshot: "docs/screenshots/raw/ios/uk/settings-dark-accent"
